--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nico1509/facebook-blog",
+    "name": "nico1509/f-blog",
     "description": "An Import Plugin for your Facebook Page",
     "type": "project",
     "license": "proprietary",
